# Student_Management_System_SSPU

./: .clang-format  CMakeLists.txt
src/: DataSort.cpp  DataSort.h  FileOperation.cpp  FileOperation.h  StudentData.h  io.cpp  io.h  main.cpp
